# BeatmapBrowser

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Procfile  backup.surql  bad_threads.md  data.surql  deploy.sh  heroku.yml  setup.md  start.sh  surreal.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml  bad_threads.md  setup.md
backend/site/: authentication.js  html_inliner.js  index.html  login.html  navbar.html  search.html  search_result.html  searchbar.html  style.css  upload.html
backend/site/css/: style.css
backend/site/js/: html_inliner.js  upload.js
backend/site/templates/: navbar.html  searchbar.html
backend/src/: database.rs  login.rs  main.rs  search.rs  upload.rs
backend/src/api/: account_data.rs  delete.rs  discord_signin.rs  downloaded.rs  mod.rs  search.rs  signin.rs  upload.rs  upvote.rs  usersongs.rs
backend/src/discord/: backlogger.rs  mod.rs
backend/src/parsing/: mod.rs  rar.rs  zip.rs
backend/src/util/: amazon.rs  body.rs  database.rs  image.rs  mod.rs  ratelimiter.rs  warp.rs
config/: example.config  nginx.conf
config/certs/: README.md
config/services/: rustapp.service  surrealdb.service
config/sites-available/: www.site.conf
config/webhook/: webhook.json
scraper/: Cargo.toml  README.md
scraper/src/: main.rs
scripts/: setup.sh
site/: account.html  index.html  login.html  search.html  upload.html
site/css/: style.css
site/js/: authentication.js  html_inliner.js  oneclick_communicator.js  search.js  songdata.js  upload.js  userpage.js
site/templates/: delete_confirm.html  footer.html  navbar.html  search_result.html  searchbar.html
src/: body.rs  database.rs  main.rs  ratelimiter.rs  search.rs  upload.rs
src/api/: mod.rs  search.rs  upload.rs  upvote.rs
src/discord/: backlogger.rs  mod.rs
src/parsing/: mod.rs  rar.rs  zip.rs
src/util/: database.rs  mod.rs  ratelimiter.rs
transfer/: Cargo.toml
transfer/src/: amazon.rs  main.rs  surreal.rs  types.rs
