[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web traffic
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.8", features = ["full"] }
hyper-staticfile = "0.10.1"

# Error handling
thiserror = "1.0.63"
anyhow = "1.0.89"

# Database
surrealdb = "2.0.1"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.128"