[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web traffic
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.8", features = ["full"] }
hyper-staticfile = "0.10.1"
multer = {  version = "3.1.0" }

# Error handling
thiserror = "1.0.63"
anyhow = "1.0.89"

# File formats
zip = "2.2.0"
image = "0.25.2"

# Database
surrealdb = "2.0.1"
firebase-auth = { version = "0.4.3", default-features = false }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
