[package]
name = "backend"
version = "1.4.1"
edition = "2021"

[dependencies]
# Web traffic
warp = "0.3.7"
urlencoding = "2.1.3"

tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.9"

# Util
futures = "0.3.31"
linked_hash_set = "0.1.4"
bytes = "1.8.0"
lazy_static = "1.5.0"
rand = "0.8.5"
base64 = "0.22.1"

# Error handling
thiserror = "1.0.63"
anyhow = "1.0.89"

# File formats
zip = { version = "2.2.0", features = [] }
unrar = "0.5.6"
image = "0.25.2"

# Database
firebase-auth = { version = "0.4.3", default-features = false }
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
aws-sdk-s3 = "1.62.0"
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.54.0"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }

# Discord
serenity = { git = "https://github.com/Serenity-rs/serenity", branch = "next" }