[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }

# Error handling
thiserror = "1.0.63"
anyhow = "1.0.89"
zip = "2.2.0"
unrar = "0.5.6"

# Database
surrealdb = "2.0.1"

reqwest = "0.12.7"

image = "0.25.2"

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
urlencoding = "2.1.3"
regex = "1.10.6"